manifests/pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-edit
spec:
  containers:
  - name: editor
    image: python:3.7
    tty: true
    volumeMounts:
        - mountPath: "/editor"
          name: task-pv-storage
  volumes:
  - name: task-pv-storage
    persistentVolumeClaim:
      claimName: pvc-test
