manifests/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: vnc-pod
  labels:
    app.kubernetes.io/name: vnc-cart
spec:
  containers:
  - name: no-vnc
    image: fredblgr/ubuntu-novnc:20.04
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vnc-service
spec:
  selector:
    app.kubernetes.io/name: vnc-cart
  ports:
  - name: vnc-port
    protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
