manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-lg-http
  namespace: longhorn-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
        pathType: Prefix
        path: /longhorn(/|$)(.*)
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argo-https
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /cd(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
